[project]
name = "oeh-search-etl"
description = "Crawls educational sites for use in WirLernenOnline.de"
authors = [
    { name = "Torsten Simon", email = "simon@edu-sharing.net" }
]
maintainers = [
    { name = "Andreas Schnäpp", email = "schnaepp@edu-sharing.net" }
]
readme = "Readme.md"
requires-python = "^3.13"
version = "2025.01.07"
dynamic = ["dependencies"]
homepage = "https://github.com/openeduhub/oeh-search-etl"
repository = "https://github.com/openeduhub/oeh-search-etl"
documentation = "https://github.com/openeduhub/oeh-search-etl"

keywords = ["metadata", "oer", "crawl", "wirlernenonline"]

classifiers = [
    "Framework :: Scrapy",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | _build
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
packages = [{ include = "converter" }]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
# see: https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
python = "^3.13"
wheel = "0.45.1"
black = "^24.10.0"
certifi = "^2024.12.14"
dateparser = "1.2"
extruct = "0.18.0"
flake8 = "7.1.1"
html2text = "2024.2.26"
jmespath = "1.0.1"
image = "1.5.33"
itemadapter = "0.10.0"
itemloaders = "^1.3.1"
isodate = "^0.7.2"
Pillow = "11.0"
playwright = "1.49.1"
pytest = "^8.3.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
requests = "2.32.3"
six = "1.17.0"
Scrapy = "2.12"
scrapy-splash = "0.9.0"
vobject = "0.9.8"
w3lib = "2.2.1"
xmltodict = "0.14.2"
trafilatura = "^2.0.0"
babel = "2.16"
langcodes = { extras = ["data"], version = "^3.3.0" }
httpx = "^0.28"
async-lru = "2.0.4"
urllib3 = "^2.2.2"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
protego = "^0.3.1"
tldextract = "^5.1.3"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.poetry.group.edu_sharing_client.dependencies]
# these dependencies are used (and automatically generated) by the "openapi-generator-cli"-generated client
# see: /edu_sharing_openapi/pyproject.toml
pydantic = ">=2.8.2"
typing-extensions = ">=4.12.2"
edu-sharing-client = { path = "edu_sharing_openapi" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
