[metadata]
name = oehSearchEtl
version = 0.1.0

[options]
packages = converter
install_requires =
    requests
    python_version == "3.9"
    wheel
    image
    html2text
    scrapy-splash
    python-dateutil
    python-dotenv==0.13.0
    Scrapy==2.4.1
    requests==2.23.0
    vobject==0.9.6.1
    xmltodict
    overrides==3.1.0